--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "express": "4.17.1",
-    "morgan": "1.10.0"
+    "joi": "^17.11.0",
+    "morgan": "1.10.0",
+    "nanoid": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
